# depbackend

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pip_requirements.txt  pyproject.toml  setup.cfg
.github/: setupdata.sh  setuppaths.sh
.github/workflows/: build.yml  codeql.yml  etchosts.txt
config/: apache-vhost-ci.conf  apache-vhost.conf  depbackend.inc
htdocs/: huc12-details.php  index.html
htdocs/auto/: huc12_bymonth.py  huc12_details.py  huc12_slopes.py  huc12_summary.py  huc12data.py  huc12report.py  mapper.py  version.py
htdocs/dl/: climatefile.py  ofetool_huc12summary.py  ofetool_huc8summary.py  shapefile.py  weps_hourly_wind.py
htdocs/dl/ofetool_mlra/: OFEtool_102A.csv  OFEtool_102C.csv  OFEtool_102D.csv  OFEtool_103.csv  OFEtool_104.csv  OFEtool_105.csv  OFEtool_106.csv  OFEtool_107.csv  OFEtool_108.csv  OFEtool_109.csv  OFEtool_112.csv  OFEtool_113.csv  OFEtool_114.csv  OFEtool_115.csv  OFEtool_56A.csv  OFEtool_56B.csv  OFEtool_57.csv  OFEtool_60A.csv  OFEtool_63B.csv  OFEtool_64.csv  OFEtool_65.csv  OFEtool_66.csv  OFEtool_67A.csv  OFEtool_71.csv  OFEtool_72.csv  OFEtool_73.csv  OFEtool_74.csv  OFEtool_75.csv  OFEtool_76.csv  OFEtool_84A.csv  OFEtool_88.csv  OFEtool_90A.csv  OFEtool_91.csv  OFEtool_92.csv  OFEtool_94B.csv  OFEtool_95.csv
htdocs/geojson/: hsearch.py  huc12.py  huc12_events.py  huc12_static.py  timedomain.py
pylib/depbackend/: __init__.py
tests/: test_all_application.py  test_doc_urls.py  test_import.py  test_website_requests.py  uris.txt  uris422.txt
tests/data/: 074440.win  097.50x035.50.cli
(+18 files in other folders)
